# ProtoTestVCL

./: README.md
VexCL/examples/: CMakeLists.txt  README  compile.sh
VexCL/examples/cmake/modules/: FindBLAS.cmake  FindBOOST.cmake  FindBlaze.cmake  FindCUDA.cmake.mine  FindLog4CPlus.cmake  FindNT2.cmake  FindOpenCL.cmake.big  FindOpenCL.cmake.mine  FindOpenCL.cmake~  FindVectorClass.cmake  FindVexCL.cmake  FindWt.cmake
VexCL/examples/tests/: CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt~  backends.cpp  compile.sh  context.cpp  devlist.cpp  first.cpp  first.cpp~  first2.cpp
VexCLTest/: 1  CMakeLists.txt  CMakeLists.txt~  README  add.cpp  backends.cpp  compile.sh  compile.sh~  devlist.cpp  devlist.cpp~  first.cpp  myDevList.cpp  myDevList.cpp~  myDevLlist.cpp  test.sh
VexCLTest/cmake/modules/: FindOpenCL.cmake  FindOpenCL.cmake~
VexCLTest/include/: Global.h  Vector3D.h  device.h  device.h.back  device.h~
